--- a/projects/foreverliving.html
+++ b/projects/foreverliving.html
@@ -73,6 +73,11 @@
    </style>
 </head>
 <body>
+   <div id="error">
+      <div>
+         <p>Open on a Larger Screen</p>
+      </div>
+   </div>
    <div class="container">
       <section>
          <div class="flex-row">
