--- a/projects/foreverliving.html
+++ b/projects/foreverliving.html
@@ -150,7 +150,7 @@
                <h3>Next Step</h3>
                <ul>
                   <li>WebSocket API</li>
-                  <li></li>
+                  <li>AI: Support, Searching Products ...</li>
                   <li></li>
                   <li></li>
                </ul>
