--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
          <section>
             <h2 style="text-align: center;">Future Plan</h2>
         <p>
-         I plan to innovate within the world of e-commerce by creating an entirely new shopping experience. I envision a platform that not only offers intuitive and seamless interactions but also redefines how users connect with products and brands. This will be a project where technology and creativity come together to enhance the way people shop and experience digital commerce.
+         I plan to innovate within the world of e-commerce by creating an entirely new shopping experience. A platform that not only offers intuitive and seamless interactions but also redefines how users connect with products and brands. This will be a project where technology and creativity come together to enhance the way people shop and experience digital commerce.
         </p>
          </section>
          <section>
